Release 3.0.1 (2014-06-??)
~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Uses complete_url_for so no http -> https issues arise [Patrick Uiterwijk]
- Reworded "Remember for 0 days" to "Remember for never" [Kevin Fenzi]


Release 3.0.0 (2014-06-15)
~~~~~~~~~~~~~~~~~~~~~~~~~~

General:
- Rewrite [Patrick Uiterwijk]

New:
- Modular architecture [Patrick Uiterwijk]
- Multi-domain Persona [Patrick Uiterwijk]
- Multi-tab operation [Patrick Uiterwijk]

Fixes:
- Issues with session cookies [Patrick Uiterwijk]


Release 2.0.4 [Actinium] (2014-03-01)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Does not delete session when it is still valid [Patrick Uiterwijk]
- Fixes an incorrect contains [Patrick Uiterwijk]
- Now actually signs the OpenID API response [Patrick Uiterwijk]
- Send nickname with OpenID API [Patrick Uiterwijk]
- Make the remote_addr check for sessions confiruable [Patrick Uiterwijk]


Release 2.0.3 [Astatine] (2014-02-14)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Add the magic value back for all group information [Patrick Uiterwijk]


Release 2.0.2 [Arsenic] (2014-02-14)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- Make it possible to configure the Persona identity issuer used in case of delegation [Patrick Uiterwijk]

Fixes:
- Only accept POST method for API [Pierre-Yves Chibon]
- Send 400 when no OpenID request is sent in API [Patrick Uiterwijk]


Release 2.0.1 [Aluminium] (2014-02-09)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Not sending username in SReg response [Patrick Uiterwijk, Ralph Bean]


Release 2.0 [Argon] (2014-02-09)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- More stable session system [Patrick Uiterwijk]
- Persona provider [Patrick Uiterwijk]
- Modular authentication backend [Patrick Uiterwijk]
- API for non-browser authentication [Patrick Uiterwijk]

Fixes:
- Login button capitalization [Ricky Elrod]
- Unstable start because of old session system [Patrick Uiterwijk]
- Attempt to add teams if not requested [Patrick Uiterwijk]